[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
files = { path = "../files" }
futures = "0.3"
futures-async-stream = "0.2"
tree_magic_mini = "3.0"
