[package]
name = "learn"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-async-stream = "0.2"
files = { path = "../files" }
